# Reassurance_Bot

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/endpoints/: chat.py  vectorstore_operation.py
app/api/v1/repositories/: chat.py  vectorstore_operation.py
app/api/v1/repository/: vectorstore_operation.py
app/core/: config.py
app/models/: chat.py
dev/: ai_reassurance.py  mongo_create_index.py  mongo_get_all_data.py  mongo_get_vector_data.py
static/: config.js  index.html  scripts.js  styles.css
